# meridian-tools

./: .dockerignore  .gitignore  .mcp.json  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: new-tool.md  run-sortie.md
catalog/oas/: AerostructPoint.yaml
deploy/: .env.example  Caddyfile.example  README.md  connect.md  docker-compose.prod.yml  keycloak-setup.md  operations.md
deploy/landing/: index.html
docker/: Caddyfile  docker-compose.yml
scripts/: dev.sh  pycycle-numpy2.patch  setup-upstream.sh
skills/: convergence-interpretation.md  design-study-workflow.md  multi-tool-composition.md  trade-study-setup.md
skills/new-tool/: SKILL.md
